syntax = "proto3";

option java_package = "com.programmersbox.uiviews";
option java_multiple_files = true;

message Settings {
  SystemThemeMode themeSetting = 1;
  bool shouldCheckUpdate = 2;
  int32 batteryPercent = 3;
  bool shareChapter = 4;
  bool showAll = 5;
  int32 historySave = 6;
  NotificationSortBy notificationSortBy = 7;
  bool showListDetail = 8;
  bool showDownload = 9;
  repeated string customUrls = 10;
}

enum SystemThemeMode {
  FollowSystem = 0;
  Day = 1;
  Night = 2;
}

enum NotificationSortBy {
    Date = 0;
    Grouped = 1;
}